# binary_patcher_rs

./: .gitignore  Cargo.toml  README.en.md  README.ja.md  README.md  build.rs
.github/workflows/: build.yml  ci.yml
scripts/: build.ps1  gen_test_data.ps1
src/: apply.rs  bundle.rs  cli.rs  ffi.rs  hdiffpatch.rs  lib.rs  main.rs  manifest.rs  rollback.rs  utils.rs
tests/: integration_test.rs
